# baby-macropad

./: .gitignore  README.md  pyproject.toml
.claude/skills/deploy-macropad/: SKILL.md
.claude/skills/use-team/: SKILL.md
.github/workflows/: ci.yml
config/: default.yaml
docs/: calibration-guide.md  debugging-journal.md  streamdock-protocol.md  ux-interaction-design.md  ux-visual-settings-design.md
docs/specs/: macropad-ui-framework.md
scripts/: install.sh
src/baby_macropad/: __init__.py  config.py  device.py  main.py  settings.py  state.py
src/baby_macropad/actions/: baby_basics.py  dispatcher.py  sleep_manager.py  undo.py
src/baby_macropad/offline/: queue.py  sync.py
src/baby_macropad/pairing/: qr.py  server.py
src/baby_macropad/ui/: confirmation.py  dashboard.py  detail.py  icons.py  key_router.py  led.py  notes.py  settings.py  sleep.py  state_machine.py
src/baby_macropad/ui/framework/: __init__.py  celebration.py  icon_cache.py  primitives.py  screen.py  text_engine.py  widgets.py
src/baby_macropad/ui/screens/: __init__.py  confirmation.py  dashboard_screen.py  detail.py  home.py  (+4 more)
tests/: test_baby_basics.py  test_config.py  test_device.py  test_key_router.py  test_led.py  test_main.py  test_offline.py  test_pairing.py  test_renderers.py  test_screens.py  test_settings.py  test_state_machine.py  test_text_engine.py  test_ui.py  test_widgets.py
tools/: gen_calibration.py  gen_calibration2.py  gen_compare.py  gen_coordinates.py  show_key_images.py  show_one.py  show_test_images.py  test_grid.py  test_hidapi_direct.py  test_hidraw_direct.py
